Fixed message z-index issue

--- a/public/day43/style.css
+++ b/public/day43/style.css
@@ -30,18 +30,19 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 135px;
+  height: 140px;
   z-index: 30;
   overflow: hidden;
 
   -webkit-transform-origin: top;
-  -webkit-transition: -webkit-transform 400ms 200ms, top 200ms 0ms;
+  -webkit-transition: -webkit-transform 400ms 200ms, top 200ms 0ms, z-index 400ms 200ms;
 
 }
 
+
 .envelope:hover .top {
   top: 30px;
-  z-index: 0;
+  z-index: -5;
 
   -webkit-transition: -webkit-transform 300ms 0ms, top 400ms 200ms;
 
@@ -49,15 +50,6 @@
   -moz-transform: rotateX(180deg);
   -o-transform: rotateX(180deg);
   transform: rotateX(180deg);
-}
-
-.envelope:hover .outer {
-
-  -moz-transition: z-index 300ms;
-  -o-transition: z-index 300ms;
-  transition: z-index 300ms;
-
-  z-index: -1;
 }
 
 .envelope:hover .left {
@@ -95,13 +87,13 @@
   left: 10px;
   border-left: 140px solid transparent;
   border-right: 140px solid transparent;
-  border-top: 120px solid #000000;
+  border-top: 130px solid #000000;
 
   -webkit-transition: z-index 0ms 300ms;
   -moz-transition: z-index 0ms 300ms;
   -o-transition: z-index 0ms 300ms;
   transition: z-index 0ms 300ms;
-
+  z-index: 5;
 }
 
 .inner {
@@ -110,7 +102,8 @@
   left: 0;
   border-left: 150px solid transparent;
   border-right: 150px solid transparent;
-  border-top: 130px solid #FFFFFF;
+  border-top: 140px solid #FFFFFF;
+  z-index: 4;
 }
 
 .left {
@@ -120,7 +113,7 @@
   border-left: 145px solid #000000;
   border-top: 100px solid transparent;
   border-bottom: 95px solid transparent;
-  z-index: 2;
+  z-index: 3;
 
   -webkit-transition: top 200ms;
   -moz-transition: top 200ms;
@@ -135,7 +128,7 @@
   border-right: 145px solid #000000;
   border-top: 100px solid transparent;
   border-bottom: 95px solid transparent;
-  z-index: 2;
+  z-index: 3;
 
   -webkit-transition: top 200ms;
   -moz-transition: top 200ms;
@@ -150,7 +143,7 @@
   border-right: 145px solid transparent;
   border-left: 145px solid transparent;
   border-bottom: 95px solid #000000;
-  z-index: 2;
+  z-index: 3;
 
   -webkit-transition: bottom 200ms;
   -moz-transition: bottom 200ms;
@@ -158,16 +151,16 @@
   transition: bottom 200ms;
 }
 
-.envelope:hover .back {
-  top: 30px;
-
-  -webkit-transition: top 400ms 200ms;
-  -moz-transition: top 400ms 200ms;
-  -o-transition: top 400ms 200ms;
-  transition: top 400ms 200ms;
+.envelope:hover .card {
+    margin-top: -60px;
+    transition: margin-top 300ms 150ms;
+    -ms-transition: margin-top 300ms 150ms;
+    -moz-transition: margin-top 300ms 150ms;
+    -o-transition: margin-top 300ms 150ms;
+    -webkit-transition: margin-top 300ms 150ms;
 }
 
-.back {
+.card {
   position: absolute;
   width: 300px;
   height: 200px;
@@ -175,8 +168,13 @@
   background-color: red;
   z-index: -1;
 
-  -webkit-transition: top 200ms;
-  -moz-transition: top 200ms;
-  -o-transition: top 200ms;
-  transition: top 200ms;
+    transition: margin-top 200ms;
+    -ms-transition: margin-top 200ms 0ms;
+    -moz-transition: margin-top 200ms 0ms;
+    -o-transition: margin-top 200ms 0ms;
+    -webkit-transition: margin-top 150ms 0ms;
+}
+
+.heart {
+  
 }
